src/objects/APTS_LP_Local_Customer_Reference_Data__c.object
<CustomObject>
    <description>Object to hold the reference data related to customer (account). (ABB-LP)</description>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Field to capture country for the LSO data.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External Id to match the unique set. Value of this field will be SAP ID + Sales organisation + Distribution Channel.</description>
        <externalId>true</externalId>
        <label>APTS External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account_GUID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ APTS_LP_Account__r.Id , APTS_LP_Account__r.GUID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Local Operational Data</relationshipLabel>
        <relationshipName>Local_Customer_Reference_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Incoterms__c</fullName>
        <label>Incoterms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_SAP_Customer_ID__c</fullName>
        <description>Placeholder field to hold the value of customer ID fetched from SAP.</description>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <description>Field to capture payment terms associated with Apttus LSO object record.</description>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division__c</fullName>
        <description>Field to capture SAP Division.</description>
        <label>SAP Division</label>
        <picklist>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Local Operational Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_LP_Account__c</columns>
        <columns>APTS_LP_Account_GUID__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_LP_Distribution_Channel__c</columns>
        <columns>APTS_External_ID__c</columns>
        <columns>APTS_LP_Incoterms__c</columns>
        <columns>APTS_LP_Local_Channel__c</columns>
        <columns>APTS_Payment_Terms__c</columns>
        <columns>APTS_LP_Sales_Organisation__c</columns>
        <columns>APTS_LP_SAP_Customer_ID__c</columns>
        <columns>APTS_SAP_Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LCRD-{00000}</displayFormat>
        <label>Local Operational Data Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Operational Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>